# platform

./: .gitignore  .npmrc  .prettierignore  CLAUDE.md  LEARNINGS.md  PHILOSOPHY.md  PLAN.md  README.md  RENAMING.md  eslint.config.mjs  figma.config.json  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tokens.config.json  tsconfig.base.json  turbo.json
.claude/commands/: add-component.md  affected.md  bootstrap-design-system.md  implement.md  new-product.md  ptfm-architect.md  ptfm-audit.md  ptfm-commonify.md  ptfm-implement.md  ptfm-plan.md  ptfm-product.md  ptfm-review.md  ptfm-simplify.md  (+5 more)
docs/: OPEN-ITEMS.md  phase-1-root-tooling.md  phase-2-design-system.md  phase-3-api.md  phase-4-typegen.md  phase-5-desktop.md  phase-6-auth.md  phase-7-generator.md  phase-8-cicd-obs.md  phase-9-finalize.md
patches/: app-builder-lib@26.15.6.patch
products/demo/api/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  fly.production.toml  fly.staging.toml  openapi.json  package.json  pyproject.toml  turbo.json
products/demo/api/alembic/: env.py
products/demo/api/alembic/versions/: 0001_initial.py
products/demo/api/src/demo_api/: errors.py  export_openapi.py  main.py  middleware.py  pagination.py  security.py  sentry.py  settings.py  tasks.py
products/demo/api/src/demo_api/models/: __init__.py  item.py
products/demo/api/src/demo_api/routers/: hello.py  items.py  push.py
products/demo/api/src/demo_api/schemas/: item.py
products/demo/api/src/demo_api/services/: base.py  push_service.py  realtime.py
products/demo/api/tests/: __init__.py  conftest.py  factories.py  test_auth.py  test_items.py  test_migration_rls.py  test_push.py  test_realtime.py
scratchpad/: audio-streaming-platform.md
scripts/: bootstrap.mjs  figma-tokens.mjs  new-product.mjs
(+155 files in other folders)
